@@ -1,5 +1,7 @@
 3.3.2
 
+- the connection setup dialog can now be opened during a connection
+
 
 
 3.3.1
@@ -10,8 +12,7 @@
 
 - improved server performance under Linux
 
-- changed the network buffer for improved OPUS PLC
-  performance
+- changed the network buffer for improved OPUS PLC performance
   
 - added protocol overhead for DSL line for upload rate calculation
 
